[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Game/UI/GameUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Game/UI/Dialogs/PreviewDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Game/UI/ChatBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Game/UI/Dialogs/RoomDialog.tscn" type="PackedScene" id=6]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "The UI of the game."
}

[node name="TopPanel" type="HBoxContainer" parent="."]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectsButton" type="Button" parent="TopPanel"]
margin_right = 64.0
margin_bottom = 26.0
text = "Objects"

[node name="GamesButton" type="Button" parent="TopPanel"]
margin_left = 68.0
margin_right = 128.0
margin_bottom = 26.0
text = "Games"

[node name="RoomButton" type="Button" parent="TopPanel"]
margin_left = 132.0
margin_right = 186.0
margin_bottom = 26.0
text = "Room"

[node name="FlipTableButton" type="Button" parent="TopPanel"]
margin_left = 190.0
margin_right = 269.0
margin_bottom = 26.0
text = "Flip Table"

[node name="ClearTableButton" type="Button" parent="TopPanel"]
margin_left = 273.0
margin_right = 362.0
margin_bottom = 26.0
text = "Clear Table"

[node name="RotationOption" type="OptionButton" parent="TopPanel"]
margin_left = 366.0
margin_right = 413.0
margin_bottom = 26.0
text = "45"
items = [ "15", null, false, 0, null, "30", null, false, 1, null, "45", null, false, 2, null, "60", null, false, 3, null, "90", null, false, 4, null, "180", null, false, 5, null ]
selected = 2

[node name="GameMenuButton" type="Button" parent="TopPanel"]
margin_left = 417.0
margin_right = 468.0
margin_bottom = 26.0
text = "Menu"

[node name="PlayerList" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 300.0
rect_min_size = Vector2( 100, 300 )
mouse_filter = 2
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectsDialog" parent="." instance=ExtResource( 2 )]
window_title = "Objects"
db_types = {
"CARDS": "cards",
"CONTAINERS": [ "containers/cube", "containers/custom", "containers/cylinder" ],
"DICE - D4": "dice/d4",
"DICE - D6": "dice/d6",
"DICE - D8": "dice/d8",
"PIECES": [ "pieces/cube", "pieces/custom", "pieces/cylinder" ],
"SPEAKERS": [ "speakers/cube", "speakers/custom", "speakers/cylinder" ],
"STACKS": "stacks",
"TIMERS": [ "timers/cube", "timers/custom", "timers/cylinder" ],
"TOKENS": [ "tokens/cube", "tokens/cylinder" ]
}
load_button_text = "Add"
status_text_one = "Added %s."
status_text_multiple = "Added %d objects."

[node name="GamesDialog" parent="." instance=ExtResource( 2 )]
window_title = "Games"
db_types = {
"GAMES": "games"
}
status_text_multiple = "Loaded %d games."

[node name="RoomDialog" parent="." instance=ExtResource( 6 )]

[node name="ClearTableConfirmDialog" type="ConfirmationDialog" parent="."]
margin_right = 250.0
margin_bottom = 93.0
rect_min_size = Vector2( 300, 100 )
dialog_text = "Are you sure you want to clear all objects from the table?"
dialog_autowrap = true

[node name="ChatBox" parent="." instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_bottom = -40.0

[node name="GameMenuBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameMenuBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenuBackground/CenterContainer"]
margin_left = 440.0
margin_top = 212.0
margin_right = 583.0
margin_bottom = 388.0

[node name="BackToGameButton" type="Button" parent="GameMenuBackground/CenterContainer/VBoxContainer"]
margin_right = 143.0
margin_bottom = 26.0
text = "Back to game"

[node name="SaveGameButton" type="Button" parent="GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 143.0
margin_bottom = 56.0
text = "Save game"

[node name="LoadGameButton" type="Button" parent="GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 143.0
margin_bottom = 86.0
text = "Load game"

[node name="OptionsButton" type="Button" parent="GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 143.0
margin_bottom = 116.0
text = "Options"

[node name="MainMenuButton" type="Button" parent="GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 143.0
margin_bottom = 146.0
text = "Quit to main menu"

[node name="DesktopButton" type="Button" parent="GameMenuBackground/CenterContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 143.0
margin_bottom = 176.0
text = "Quit to desktop"

[node name="FileDialog" type="FileDialog" parent="GameMenuBackground"]
margin_right = 600.0
margin_bottom = 350.0
access = 2
filters = PoolStringArray( "*.table ; OpenTabletop Table" )
current_dir = "/"
current_path = "/"

[node name="OptionsMenu" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="TopPanel/ObjectsButton" to="." method="_on_ObjectsButton_pressed"]
[connection signal="pressed" from="TopPanel/GamesButton" to="." method="_on_GamesButton_pressed"]
[connection signal="pressed" from="TopPanel/RoomButton" to="." method="_on_RoomButton_pressed"]
[connection signal="pressed" from="TopPanel/FlipTableButton" to="." method="_on_FlipTableButton_pressed"]
[connection signal="pressed" from="TopPanel/ClearTableButton" to="." method="_on_ClearTableButton_pressed"]
[connection signal="item_selected" from="TopPanel/RotationOption" to="." method="_on_RotationOption_item_selected"]
[connection signal="pressed" from="TopPanel/GameMenuButton" to="." method="_on_GameMenuButton_pressed"]
[connection signal="entry_requested" from="ObjectsDialog" to="." method="_on_ObjectsDialog_entry_requested"]
[connection signal="entry_requested" from="GamesDialog" to="." method="_on_GamesDialog_entry_requested"]
[connection signal="requesting_room_details" from="RoomDialog" to="." method="_on_RoomDialog_requesting_room_details"]
[connection signal="setting_lighting" from="RoomDialog" to="." method="_on_RoomDialog_setting_lighting"]
[connection signal="setting_skybox" from="RoomDialog" to="." method="_on_RoomDialog_setting_skybox"]
[connection signal="confirmed" from="ClearTableConfirmDialog" to="." method="_on_ClearTableConfirmDialog_confirmed"]
[connection signal="pressed" from="GameMenuBackground/CenterContainer/VBoxContainer/BackToGameButton" to="." method="_on_BackToGameButton_pressed"]
[connection signal="pressed" from="GameMenuBackground/CenterContainer/VBoxContainer/SaveGameButton" to="." method="_on_SaveGameButton_pressed"]
[connection signal="pressed" from="GameMenuBackground/CenterContainer/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="GameMenuBackground/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="GameMenuBackground/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="GameMenuBackground/CenterContainer/VBoxContainer/DesktopButton" to="." method="_on_DesktopButton_pressed"]
[connection signal="file_selected" from="GameMenuBackground/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="GameMenuBackground/FileDialog" to="." method="_on_FileDialog_popup_hide"]
[connection signal="applying_options" from="OptionsMenu" to="." method="_on_OptionsMenu_applying_options"]
